--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+__pycache__/
+*.py[cod]
+*.egg-info/
+.env
+*.log
+*.sqlite3
+.DS_Store
+venv
