--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     image: cloudflare/cloudflared:latest
     container_name: cloudflared_tunnel
     restart: unless-stopped
-    command: tunnel --no-autoupdate run --token eyJhIjoiNGI3ZDMwZjhlZjY3MDdjMWM5NzExZDQ5ZDQxMmFhOGUiLCJ0IjoiNTZmYTk5OWMtZTU2My00Y2ZmLWJlY2ItYzI5YzI2OWI2ZDVlIiwicyI6Ik9HRTJPVEEwWW1RdE16SmlZUzAwTkRsaExXSXlZalF0T0dNelptWmtZVFkyWmpKaSJ9
+    command: tunnel --no-autoupdate run --token ****YOUR-TOKEN-HERE****
     networks:
       - app_network
 
